随访信息完成体检页面，目前测试没有大问题。iOS考虑控制不能划屏关闭本win。

--- a/widget/html/followup/followup.html
+++ b/widget/html/followup/followup.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
     <title>随访信息</title>
-    <link rel="stylesheet" type="text/css" href="../css/history.css" />
-    <link rel="stylesheet" type="text/css" href="../css/button.css" />
-    <script type="text/javascript" src="../script/api.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../css/history.css" />
+    <link rel="stylesheet" type="text/css" href="../../css/button.css" />
+    <script type="text/javascript" src="../../script/api.js"></script>
 </head>
 
 <body class="body-silver">
@@ -26,10 +26,16 @@
         <div id="main" class="flex-con">
             <div class="groupName">病情</div>
             <div class="group">
-                <div class="field textarea_field bottom">
+                <div class="field textarea_field">
                     <div class="textarea_key">病情</div>
                     <div class="textarea_value">
                         <textarea id="condition"></textarea>
+                    </div>
+                </div>
+                <div class="field textarea_field bottom">
+                    <div class="textarea_key">治疗</div>
+                    <div class="textarea_value">
+                        <textarea id="treatment"></textarea>
                     </div>
                 </div>
             </div>
