--- a/widget/html/history/dupHistoryList.html
+++ b/widget/html/history/dupHistoryList.html
@@ -73,7 +73,7 @@ var apiready = function() {
             borderColor: '#f0f0f0',
             item: {
                 bgColor: '#FFF',
-                activeBgColor: '#6f96d1',
+                activeBgColor: '#688CD4',
                 height: 80,
                 imgWidth: 40,
                 imgHeight: 40,
