--- a/widget/html/history/historyList.html
+++ b/widget/html/history/historyList.html
@@ -94,7 +94,7 @@ var apiready = function() {
         data: historyListData,
         rightBtns: [{
             bgColor: '#d5d7dc',
-            activeBgColor: '',
+            activeBgColor: '#688CD4',
             width: 70,
             title: '修改',
             titleSize: 14,
@@ -103,7 +103,7 @@ var apiready = function() {
             iconWidth: 20
         }, {
             bgColor: '#d5d7dc',
-            activeBgColor: '',
+            activeBgColor: '#688CD4',
             width: 70,
             title: '删除',
             titleSize: 14,
@@ -115,7 +115,7 @@ var apiready = function() {
             borderColor: '#f0f0f0',
             item: {
                 bgColor: '#FFF',
-                activeBgColor: '#6f96d1',
+                activeBgColor: '#688CD4',
                 height: 80,
                 imgWidth: 60,
                 imgHeight: 60,
