--- a/widget/html/history/viewHistory.html
+++ b/widget/html/history/viewHistory.html
@@ -27,18 +27,18 @@
         <div id="main" class="flex-con">
             <div class="groupName">患者</div>
             <div class="group">
-                <div class="field bottom" onclick="openWin('viewPatient');">
+                <div class="field bottom" tapmode="onFieldClick" onclick="openWin('viewPatient');">
                     <div class="key">患者信息</div>
                     <div class="value more"><span>&gt;</span></div>
                 </div>
             </div>
             <div class="groupName">检查</div>
             <div class="group">
-                <div class="field" onclick="openWin('viewPhysical');">
+                <div class="field" tapmode="onFieldClick" onclick="openWin('viewPhysical');">
                     <div class="key">体检信息</div>
                     <div class="value more"><span>&gt;</span></div>
                 </div>
-                <div class="field bottom">
+                <div class="field bottom" tapmode="onFieldClick" >
                     <div class="key">辅助检查</div>
                     <div class="value more"><span>&gt;</span></div>
                 </div>
