--- a/widget/html/followup/viewFollowUp.html
+++ b/widget/html/followup/viewFollowUp.html
@@ -19,7 +19,7 @@
             <div id="middle">
                 <span id="title">随访信息</span>
             </div>
-            <a id="right" tapmode="" onclick="modiFollowUp();" class="button button-raised button-blue">
+            <a id="right" tapmode="" onclick="modiFollowUp();" class="button button-raised button-silver">
                     修改
                 </a>
         </header>
