--- a/widget/html/followup/viewFollowUpFrame.html
+++ b/widget/html/followup/viewFollowUpFrame.html
@@ -21,7 +21,7 @@
             <div id="middle">
                 <span id="title">随访信息</span>
             </div>
-            <a id="right" tapmode="" onclick="modiFollowUp();" class="button button-raised button-blue">
+            <a id="right" tapmode="" onclick="modiFollowUp();" class="button button-raised button-silver">
                     修改
                 </a>
         </header>
@@ -65,17 +65,20 @@ apiready = function() {
         api.closeWin();
     }
 
+    $api.attr($api.byId('condition'), 'readonly', 'true');
+    $api.attr($api.byId('treatment'), 'readonly', 'true');
+
     follow_up_id = api.pageParam.follow_up_id;
 
     getFullFollowUp(follow_up_id);
 
-    // api.addEventListener({
-    //     name: 'returnBirthday'
-    // }, function(ret, err) {
-    //     if (ret) {
-    //         $api.byId('follow_up_date').value = ret.value.birthday;
-    //     }
-    // });
+    api.addEventListener({
+        name: 'followupSaveEvent'
+    }, function(ret, err) {
+        if (ret && ret.value) {
+            getFullFollowUp(ret.value.follow_up_id);
+        }
+    });
 }
 
 function getFullFollowUp(follow_up_id) {
@@ -94,6 +97,11 @@ function getFullFollowUp(follow_up_id) {
                 qid: queryId,
                 column: 'physical_pointer'
             });
+            query.whereEqual({
+                qid: queryId,
+                column: 'id',
+                value: follow_up_id
+            })
             model.findAll({
                 class: historyConstants.followUpTable,
                 qid: queryId
@@ -117,13 +125,13 @@ function getFullFollowUp(follow_up_id) {
 function modiFollowUp() {
     api.openWin({
         name: api.winName + "_modi_followup",
-        url: '../followup.html',
+        url: './followup.html',
         pageParam: {},
         reload: true,
         bounces: false,
         vScrollBarEnabled: false,
         animation: {
-            type: "movein",
+            type: "fade",
             duration: 0
         }
     });
