修复physical浏览页面编辑效果bug

--- a/widget/html/physical/viewPhysicalFrame.html
+++ b/widget/html/physical/viewPhysicalFrame.html
@@ -27,37 +27,37 @@
         </header>
         <div id="main" class="flex-con">
             <div class="groupName">裸眼视力</div>
-            <div class="group group-edit">
+            <div class="group">
                 <div class="field">
                     <div class="key">Vod</div>
                     <div class="value">
-                        <input type="text" id="vod" onclick="openPicker('vod')" />
+                        <input type="text" id="vod" />
                     </div>
                 </div>
                 <div class="field bottom">
                     <div class="key">Vos</div>
                     <div class="value">
-                        <input type="text" id="vos" onclick="openPicker('vos')" />
+                        <input type="text" id="vos" />
                     </div>
                 </div>
             </div>
             <div class="groupName">矫正视力</div>
-            <div class="group group-edit">
+            <div class="group">
                 <div class="field">
                     <div class="key">Vod</div>
                     <div class="value">
-                        <input type="text" id="corrected_vod" onclick="openPicker('corrected_vod')" />
+                        <input type="text" id="corrected_vod" />
                     </div>
                 </div>
                 <div class="field bottom">
                     <div class="key">Vos</div>
                     <div class="value">
-                        <input type="text" id="corrected_vos" onclick="openPicker('corrected_vos')" />
+                        <input type="text" id="corrected_vos" />
                     </div>
                 </div>
             </div>
             <div class="groupName">眼压</div>
-            <div class="group group-edit">
+            <div class="group">
                 <div class="field">
                     <div class="key">Tod</div>
                     <div class="value_with_unit">
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="groupName">其他</div>
-            <div class="group group-edit">
+            <div class="group">
                 <div class="field">
                     <div class="key">外眼</div>
                     <div class="value">
